Some minor changes